k8s/apps/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.28.1
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /var/www/FreshRSS/data
              name: data
            - mountPath: /var/www/FreshRSS/data/config.custom.php
              name: config
              subPath: config.custom.php
            - mountPath: /var/www/FreshRSS/data/config-user.custom.php
              name: config
              subPath: config-user.custom.php
      volumes:
        - name: config
          configMap:
            name: freshrss-config
        - name: data
          persistentVolumeClaim:
            claimName: freshrss-data
